--- a/CarRental/MainWindow.xaml
+++ b/CarRental/MainWindow.xaml
@@ -6,13 +6,13 @@
         xmlns:local="clr-namespace:CarRental"
         mc:Ignorable="d"
         Title="MainWindow" Height="460" Width="800" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen">
-    <Grid>
-        <Grid Width="160" HorizontalAlignment="Left" Background="AliceBlue">
+    <Grid Background="White">
+        <Grid Width="160" HorizontalAlignment="Left" Background="#6369C0">
 
-            <Button Name="Bt_Grid1" Content="Samochody" HorizontalAlignment="Left" Margin="0,84,0,0" VerticalAlignment="Top" Width="160" Height="53" Click="Bt_Grid1_Click"/>
-            <Button Name="Bt_Grid3" Content="Wypożyczenia" HorizontalAlignment="Left" Margin="0,165,0,0" VerticalAlignment="Top" Width="160" Height="53" Click="Bt_Grid3_Click" />
-            <Button Name="Bt_Grid2" Content="Zarządzanie" HorizontalAlignment="Left" Margin="0,244,0,0" VerticalAlignment="Top" Width="160" Height="53" IsEnabled="False" Click="Bt_Grid2_Click"/>
-            <Button Name="Bt_LogOut" Content="Wyloguj" HorizontalAlignment="Left" Margin="0,333,0,0" VerticalAlignment="Top" Width="160" Height="53" Click="Bt_LogOut_Click"/>
+            <Button Name="Bt_Grid1" Content="Samochody" HorizontalAlignment="Left" Margin="0,52,0,0" VerticalAlignment="Top" Width="160" Height="53" Click="Bt_Grid1_Click"/>
+            <Button Name="Bt_Grid3" Content="Wypożyczenia" HorizontalAlignment="Left" Margin="0,147,0,0" VerticalAlignment="Top" Width="160" Height="53" Click="Bt_Grid3_Click" />
+            <Button Name="Bt_Grid2" Content="Zarządzanie" HorizontalAlignment="Left" Margin="0,236,0,0" VerticalAlignment="Top" Width="160" Height="53" IsEnabled="False" Click="Bt_Grid2_Click"/>
+            <Button Name="Bt_LogOut" Content="Wyloguj" HorizontalAlignment="Left" Margin="0,323,0,0" VerticalAlignment="Top" Width="160" Height="53" Click="Bt_LogOut_Click"/>
         </Grid>
 
         <!--    1   -->
@@ -36,26 +36,53 @@
 
         <!--    2   -->
         <Grid Name="Grid_2" HorizontalAlignment="Stretch" Margin="160,0,0,0" Background="White" Visibility="Hidden">
-            <ListView Name="LisView_Emp" HorizontalAlignment="Left" Height="320" Margin="30,50,0,0" VerticalAlignment="Top" Width="370" SelectionChanged="LisView_Emp_SelectionChanged">
-                <ListView.View>
-                    <GridView>
-                        <GridViewColumn Header="Imie" Width="70" DisplayMemberBinding="{Binding Path=FirstName}"/>
-                        <GridViewColumn Header="Nazwisko" Width="70" DisplayMemberBinding="{Binding Path=LastName}"/>
-                        <GridViewColumn Header="Telefon" Width="70" DisplayMemberBinding="{Binding Path=PhoneNumber}"/>
-                        <GridViewColumn Header="Uprawnienia" Width="70" DisplayMemberBinding="{Binding Path=AdvancePermission}"/>
-                        <GridViewColumn Header="Wynagrodzenie" Width="70" DisplayMemberBinding="{Binding Path=Salary}"/>
-                    </GridView>
-                </ListView.View>
-            </ListView>
-            <Button Name="Bt_AddEmp" Content="Dodaj" HorizontalAlignment="Left" Margin="467,92,0,0" VerticalAlignment="Top" Width="75" Click="Bt_AddEmp_Click"/>
-            <Button Name="Bt_ModEmp" Content="Modyfikuj" HorizontalAlignment="Left" Margin="467,182,0,0" VerticalAlignment="Top" Width="75" Click="Bt_ModEmp_Click" IsEnabled="False"/>
-            <Button Name="Bt_DelEmp" Content="Zwolnij" HorizontalAlignment="Left" Margin="467,263,0,0" VerticalAlignment="Top" Width="75" Click="Bt_DelEmp_Click" IsEnabled="False"/>
+            <TabControl HorizontalAlignment="Left" Height="429" VerticalAlignment="Top" Width="632">
+                <TabItem Header="Pracownicy">
+                    <Grid Background="White">
+                        <ListView Name="LisView_Emp" HorizontalAlignment="Left" Height="320" Margin="30,50,0,0" VerticalAlignment="Top" Width="370" SelectionChanged="LisView_Emp_SelectionChanged">
+                            <ListView.View>
+                                <GridView>
+                                    <GridViewColumn Header="Imie" Width="70" DisplayMemberBinding="{Binding Path=FirstName}"/>
+                                    <GridViewColumn Header="Nazwisko" Width="70" DisplayMemberBinding="{Binding Path=LastName}"/>
+                                    <GridViewColumn Header="Telefon" Width="70" DisplayMemberBinding="{Binding Path=PhoneNumber}"/>
+                                    <GridViewColumn Header="Uprawnienia" Width="70" DisplayMemberBinding="{Binding Path=AdvancePermission}"/>
+                                    <GridViewColumn Header="Wynagrodzenie" Width="70" DisplayMemberBinding="{Binding Path=Salary}"/>
+                                </GridView>
+                            </ListView.View>
+                        </ListView>
+                        <Button Name="Bt_AddEmp" Content="Dodaj" HorizontalAlignment="Left" Margin="467,92,0,0" VerticalAlignment="Top" Width="75" Click="Bt_AddEmp_Click"/>
+                        <Button Name="Bt_ModEmp" Content="Modyfikuj" HorizontalAlignment="Left" Margin="467,182,0,0" VerticalAlignment="Top" Width="75" Click="Bt_ModEmp_Click" IsEnabled="False"/>
+                        <Button Name="Bt_DelEmp" Content="Zwolnij" HorizontalAlignment="Left" Margin="467,263,0,0" VerticalAlignment="Top" Width="75" Click="Bt_DelEmp_Click" IsEnabled="False"/>
+                    </Grid>
+                </TabItem>
+                <TabItem Header="Klienci">
+                    <Grid Background="White">
+                        <ListView Name="LisView_Customser" HorizontalAlignment="Center" Height="320" Margin="0,19,0,0" VerticalAlignment="Top" Width="606" SelectionChanged="LisView_Customser_SelectionChanged">
+                            <ListView.View>
+                                <GridView>
+                                    <GridViewColumn Header="Imie" Width="70" DisplayMemberBinding="{Binding Path=FirstName}"/>
+                                    <GridViewColumn Header="Nazwisko" Width="70" DisplayMemberBinding="{Binding Path=LastName}"/>
+                                    <GridViewColumn Header="Telefon" Width="70" DisplayMemberBinding="{Binding Path=PhoneNumber}"/>
+                                    <GridViewColumn Header="Adres" Width="190" DisplayMemberBinding="{Binding Path=Address}"/>
+                                    <GridViewColumn Header="Miejscowość" Width="80" DisplayMemberBinding="{Binding Path=City}"/>
+                                    <GridViewColumn Header="Nr dowodu" Width="80" DisplayMemberBinding="{Binding Path=Id_Number}"/>
+                                </GridView>
+                            </ListView.View>
+                        </ListView>
+                        <Button Name="Bt_Export" Content="Export" HorizontalAlignment="Left" Margin="144,360,0,0" VerticalAlignment="Top" Width="90" FontSize="14" Click="Bt_Export_Click"/>
+                        <Button Name="Bt_Import" Content="Import" HorizontalAlignment="Left" Margin="295,360,0,0" VerticalAlignment="Top" Width="90" FontSize="14" Click="Bt_Import_Click"/>
+                        <Button Name="Bt_DelCust" Content="Usun klienta" HorizontalAlignment="Left" Margin="425,360,0,0" VerticalAlignment="Top" Width="90" FontSize="14" IsEnabled="False" Click="Bt_DelCust_Click"/>
+                    </Grid>
+                </TabItem>
+            </TabControl>
+
+
 
         </Grid>
 
 
         <!--    3   -->
-        <Grid Name="Grid_3" HorizontalAlignment="Stretch" Margin="160,0,0,0" Background="White" Visibility="Visible">
+        <Grid Name="Grid_3" HorizontalAlignment="Stretch" Margin="160,0,0,0" Background="White" Visibility="Hidden">
             <ListView Name="ListView_Rent" HorizontalAlignment="Left" Height="311" Margin="49,41,0,0" VerticalAlignment="Top" Width="413" SelectionChanged="ListView_Rent_SelectionChanged">
                 <ListView.View>
                     <GridView>
@@ -70,7 +97,7 @@
 
             <Button Name="Bt_NewRent" Content="Nowe wynajęcie" HorizontalAlignment="Left" Margin="67,383,0,0" VerticalAlignment="Top" Width="120" FontSize="14" Click="Bt_NewRent_Click"/>
             <Button Name="Bt_EndRent" Content="Zakończ" HorizontalAlignment="Left" Margin="223,383,0,0" VerticalAlignment="Top" Width="120" FontSize="14" Click="Bt_EndRent_Click" IsEnabled="False"/>
-            <Button Name="Bt_Export" Content="Export" HorizontalAlignment="Left" Margin="387,383,0,0" VerticalAlignment="Top" Width="120" FontSize="14" Click="Bt_Export_Click" />
+
         </Grid>
 
 
